--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2 class="project-header">Projects</h2>
         <div class="project-container">
 
-            <div class="project-card" id="project1 ">
+            <div class="project-card" id="project1">
 
                 <div class="project-number project-number-right">01</div>
                 <div class="project-content "> 
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project-card" id="project2 ">
+            <div class="project-card" id="project2">
                 <div class="project-number project-number-right">02</div>
                 <div class="project-content">
                     <div class="project-skill-container">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
         </div>
-        <div class="project-card" id="project3 ">
+        <div class="project-card" id="project3">
                 <div class="project-number project-number-left">03</div>
                 <div class="project-content">
                     <div class="project-skill-container">
@@ -173,7 +173,7 @@
                     </div>
                 </div>
      </div>
-     <div class="project-card" id="project4 ">
+     <div class="project-card" id="project4">
                 <div class="project-number project-number-right">04</div>
                 <div class="project-content">
                     <div class="project-skill-container">
@@ -210,7 +210,12 @@
                         
                     </div>
                 </div>
-</div>
+       </div>
+       </div>
+       </div>
+       </div>
+       </body>
+    
 
 
 
